# sdl2-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  vcpkg.json
assets/maps/: map1.tmx
config/: config.yaml
include/: Action.h  CCollision.h  CScore.h  CShape.h  CSprite.h  CText.h  CTilemap.h  CTransform.h  Camera.h  Engine.h  Entity.h  EntityManager.h  GeometryWarsScene.h  MegamarioScene.h  MenuScene.h  Physics.h  Random.h  Scene.h  SceneManager.h  Sprite.h  Text.h  Texture.h  Window.h
scripts/: map.lua  script.lua
src/: Action.h  ActionManager.cpp  ActionManager.h  Assets.h  CCollision.h  CInput.h  CLifespan.h  CMakeProject1.cpp  CScore.h  CShape.h  CSprite.h  CText.h  CTilemap.h  CTransform.h  Camera.h  Color.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  GameEngine.h  Log.cpp  Log.h  Physics.cpp  Physics.h  Random.h  SceneManager.cpp  SceneManager.h  Vector2.cpp  Vector2.h  main.cpp  window.cpp  window.h
src/Scenes/: GeometryWarsScene.cpp  GeometryWarsScene.h  MegamarioScene.cpp  MegamarioScene.h  MenuScene.cpp  MenuScene.h  Scene.h
src/sdl/: Action.h  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h
